@@ -23,21 +23,21 @@
     </developers>
 
     <properties>
-        <commons-io.version>2.15.1</commons-io.version>
-        <commons-lang3.version>3.14.0</commons-lang3.version>
-        <commons-text.version>1.11.0</commons-text.version>
-        <google-auth.version>1.21.0</google-auth.version>
-        <google-api.version>2.2.0</google-api.version>
-        <google-api-services-calendar.version>v3-rev20240111-2.0.0</google-api-services-calendar.version>
+        <commons-io.version>2.20.0</commons-io.version>
+        <commons-lang3.version>3.18.0</commons-lang3.version>
+        <commons-text.version>1.14.0</commons-text.version>
+        <google-auth.version>1.37.1</google-auth.version>
+        <google-api.version>2.8.0</google-api.version>
+        <google-api-services-calendar.version>v3-rev20250404-2.0.0</google-api-services-calendar.version>
         <google-api-services-oauth2.version>v2-rev20200213-2.0.0</google-api-services-oauth2.version>
-        <ikonli.version>12.3.1</ikonli.version>
-        <java.version>22</java.version>
-        <javafx.version>22</javafx.version>
+        <ikonli.version>12.4.0</ikonli.version>
+        <java.version>24</java.version>
+        <javafx.version>24.0.2</javafx.version>
         <javax-annotation.version>1.3.2</javax-annotation.version>
-        <junit-jupiter.version>5.10.1</junit-jupiter.version>
-        <logback.version>1.4.14</logback.version>
-        <slf4j.version>2.0.10</slf4j.version>
-        <spring.version>6.1.2</spring.version>
+        <junit-jupiter.version>5.13.4</junit-jupiter.version>
+        <logback.version>1.5.18</logback.version>
+        <slf4j.version>2.0.17</slf4j.version>
+        <spring.version>6.2.9</spring.version>
     </properties>
 
     <dependencies>
@@ -139,17 +139,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
+                <version>3.14.0</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                     <release>${java.version}</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.2.2</version>
+                <version>3.4.2</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -161,23 +160,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-            </plugin>
-            <plugin>
-                <groupId>com.github.spotbugs</groupId>
-                <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>4.8.2.0</version>
-                <configuration>
-                    <excludeFilterFile>.spotbugs-exclude.xml</excludeFilterFile>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <version>3.5.3</version>
             </plugin>
         </plugins>
     </build>
@@ -190,7 +173,7 @@
                     <plugin>
                         <groupId>de.perdian.maven.plugins</groupId>
                         <artifactId>macosappbundler-maven-plugin</artifactId>
-                        <version>1.17.0</version>
+                        <version>1.21.1</version>
                         <configuration>
                             <plist>
                                 <CFBundleIconFile>src/bundle/macos/resources/calendar-regular.icns</CFBundleIconFile>
@@ -199,7 +182,6 @@
                                 <JVMOptions>
                                     <string>-Dapple.laf.useScreenMenuBar=true</string>
                                     <string>-Xdock:name=${project.name}</string>
-                                    <string>--enable-preview</string>
                                 </JVMOptions>
                             </plist>
                         </configuration>
